# feature-flag-samples

./: README.md
aspnet-launchdarkly/: Flaggy.sln  README.md  docker-compose.yaml  ld-flagdata.json
aspnet-launchdarkly/src/: FeatureGateAttribute.cs  Flaggy.csproj  Program.cs  appsettings.json
aspnet-launchdarkly/src/Controllers/: PostsController.cs
aspnet-launchdarkly/src/Pages/: Index.cshtml.cs  PostCreate.cshtml.cs
aspnet-launchdarkly/tests/: Flaggy.Tests.csproj
aspnet-launchdarkly/tests/Support/: TestWebApplicationFactory.cs
launchdarkly/: README.md  docker-compose.yaml
launchdarkly/app-aspnet/: .env.development  Flaggy.sln  docker-compose.yaml
launchdarkly/app-aspnet/src/: FeatureFlags.cs  Flaggy.csproj  Program.cs  appsettings.json
launchdarkly/app-aspnet/src/Controllers/: PostsController.cs
launchdarkly/app-aspnet/tests/: PostsControllerTests.cs
launchdarkly/app-javascript-nextjs/: .env.development  README.md  package-lock.json  package.json
launchdarkly/app-javascript-nextjs/pages/: _app.js  claims.js  index.js
launchdarkly/app-javascript-nextjs/pages/components/Header/: index.js
launchdarkly/app-javascript-nextjs/pages/contexts/: feature-management.js
launchdarkly/app-python-django/: .dockerignore  .env.development  .gitignore  Pipfile  README.md  launchdarkly-flagdata.json  package-lock.json  package.json
launchdarkly/app-python-django/app_python_django/: settings.py
launchdarkly/launchdarkly-import-flags/: Dockerfile  docker-compose.yaml  ffs.json  import.py  pyproject.toml
(+6 files in other folders)
